--- a/llama2-test.ipynb
+++ b/llama2-test.ipynb
@@ -8,8 +8,91 @@
    },
    "outputs": [],
    "source": [
-    ""
+    "!git clone https://github.com/meta-llama/llama.git\n",
+    "!cd /content/llama && bash download.sh"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "!wget https://raw.githubusercontent.com/huggingface/transformers/main/src/transformers/models/llama/convert_llama_weights_to_hf.py"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "!pip install git+https://github.com/huggingface/transformers\n",
+    "!pip install accelerate\n",
+    "!pip install sentencepiece"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "!python convert_llama_weights_to_hf.py --input_dir /content/llama/llama-2-7b  --model_size 7B --output_dir /content/llama/models_hf/7B"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "!git clone https://github.com/meta-llama/llama-recipes.git"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "!pip install -r requirements.txt"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "#test model\n",
+    "import torch\n",
+    "from transformers import LlamaForCausalLM, LlamaTokenizer\n",
+    "model_id = \"/content/llama/models_hf/7B\"\n",
+    "tokenizer = LlamaTokenizer.from_pretrained(model_id)\n",
+    "model = LlamaForCausalLM.from_pretrained(model_id, load_in_8bit = True, device_map = 'auto', torch_dtype = torch.float16)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   }
   }
  ],
  "metadata": {
